--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 <%- include('./partials/header') -%> 
-    <h1>Log in</h1>
+    <h1>Log in burası</h1>
     <form action="/login" method="POST">
         <div class="mb-3">
           <label for="username" class="form-label">Username</label>
